# flag-explorer-app

./: .gitignore  DEPLOYMENT.md  PIPELINE_SETUP.md  README.md  docker-compose.yml  open-project.sh
.github/workflows/: ci-cd.yml
backend/: .coverage  ARCHITECTURE.md  Dockerfile  README.md  coverage.xml  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  start_server.py
backend/app/: controllers.py  main.py  models.py  routes.py  services.py
backend/tests/: test_controllers.py  test_main.py  test_services.py
frontend/: Dockerfile  README.md  jest.config.js  next.config.ts  package-lock.json  package.json
frontend/__tests__/: page.test.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/country/[name]/: page.tsx
frontend/src/lib/: api.ts
frontend/src/types/: country.ts
